--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+
+here.api.app.id = gzDiHBK3zeIlCFCcfXlb
+here.api.app.code = W5N_sjpbPMfkMkfd0Tv77g
+here.api.url = https://geocoder.api.here.com/6.2/geocode.json
